After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712355 - ObexPush stops working when obexd restarts
ObexPush stops working when obexd restarts
Status: RESOLVED FIXED
Product: gnome-user-share
Classification: Core
Component: bluetooth
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-user-share maintainers
gnome-user-share maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-15 09:31 UTC by Bastien Nocera
Modified: 2013-11-15 12:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2013-11-15 09:31:20 UTC
We should monitor for the availability of the manager proxy to register the agent.