obex: Fix agent not working when restarting obexd

We need to watch obexd so that we can be sure that we can
re-register our agent when obexd comes and goes.

This is useful for debugging at least.

https://bugzilla.gnome.org/show_bug.cgi?id=712355